k8strain3/network-网络/gateway-api/test/paths-whoami.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute 
metadata: 
  name: http-app-1 
  namespace: kube-system 
  labels: 
    app: traefik 
spec: 
  parentRefs:
  - name: traefik-gateway
  hostnames:
  - "whoami.tf.bltest.kutesmart.cn"
  rules:
  - matches: 
    - path: 
        type: Exact 
        value: /foo
    backendRefs: 
    - name: whoami 
      port: 80 
      weight: 1
